# Conservatory

./: .gitignore  ATTRIBUTIONS.md  CLAUDE.md  Cargo.toml  README.md  meson.build  meson_options.txt  patchnotes.md  roadmap.md  spec.md
.github/workflows/: ci.yml
conservatory/: Cargo.toml
conservatory-audiobooks/: Cargo.toml
conservatory-audiobooks/examples/: gen_fixtures.rs
conservatory-audiobooks/src/: chapters.rs  edit.rs  error.rs  ffprobe.rs  folder.rs  import.rs  lib.rs  reorg.rs  sidecar.rs  tags.rs
conservatory-audiobooks/tests/: import.rs  read.rs  reorg.rs
conservatory-audiobooks/tests/fixtures/sidecar/Tagged Folder/: metadata.opf
conservatory-audiobooks/tests/fixtures/single/: book.m4b
conservatory-cli/: Cargo.toml
conservatory-cli/src/: main.rs
conservatory-core/: Cargo.toml
conservatory-core/examples/: gen_audio_fixtures.rs
conservatory-core/src/: accent.rs  ape.rs  audit.rs  config.rs  covers.rs  debug.rs  dedup.rs  edit.rs  errors.rs  lib.rs  mpris.rs  path_template.rs  playlist.rs  replaygain.rs  scrobble.rs  secret.rs  shelf_genre.rs  stats.rs  tags.rs  verify.rs  waveform.rs
conservatory-core/src/db/: command.rs  connection.rs  facets.rs  fixtures.rs  fts_tests.rs  migrations.rs  mod.rs  models.rs  pool.rs  probe.rs  reads.rs  worker.rs  writes.rs
conservatory-core/src/db/migrations/: 0001_initial.sql  0002_move_journal.sql  0003_perspectives.sql  0004_playback_state.sql  0005_queue.sql  0006_podcasts.sql  0007_playback_cursor_kind.sql  0008_eq.sql  0009_audio_state.sql  0010_eq_presets_builtin.sql  0011_audiobooks.sql  0012_move_book_ops.sql  0013_book_playback_cursor.sql  0014_verify_results.sql  0015_ape_strips.sql  0016_smart_speed_level.sql  0017_playlists.sql  0018_shuffle_repeat.sql  0019_fts_fold.sql  0020_scrobble_outbox.sql
conservatory-core/src/import/: mod.rs  resolve.rs  scan.rs
conservatory-core/src/mover/: fsops.rs  journal.rs  mod.rs
conservatory-core/src/player/: book.rs  chain.rs  chapters.rs  dsp.rs  engine.rs  handle.rs  host.rs  item.rs  mod.rs  mode.rs  profile.rs  scrobble_progress.rs  session.rs  shuffle.rs  sleep.rs  spectrum.rs  spoken.rs  state.rs
conservatory-core/tests/: ape.rs  audio_state.rs  audiobook_playback.rs  audiobooks.rs  audit.rs  covers.rs  db_worker.rs  edit.rs  eq.rs  facets.rs  import.rs  mover.rs  mover_books.rs  paths.rs  perspectives.rs  playback.rs  playlists.rs  podcasts.rs  queue.rs  replaygain.rs  scrobble.rs  scrobble_engine.rs  search_parity.rs  shelf_genre.rs  sleep.rs  stats.rs  tags.rs  verify.rs  waveform.rs  writeback.rs
conservatory-core/tests/fixtures/audio/: README.md  sample.flac  sample.m4a  sample.opus
conservatory-podcasts/: Cargo.toml
conservatory-podcasts/src/: chapters.rs  credentials.rs  download.rs  error.rs  fetcher.rs  http.rs  lib.rs  namespace.rs  notes.rs  opml.rs  parse.rs  refresh.rs  retention.rs  slug.rs
conservatory-podcasts/tests/: download.rs  fetcher.rs  opml.rs  refresh.rs  retention.rs
conservatory-podcasts/tests/fixtures/feeds/: feed_2ep.xml  feed_3ep.xml
conservatory-search/: Cargo.toml
conservatory-search/src/: ast.rs  dates.rs  eval.rs  fold.rs  lex.rs  lib.rs  parse.rs  rank.rs  sql_translate.rs
conservatory/src/: book_query.rs  main.rs  playqueue.rs  query.rs  statusbar.rs  theme.rs  viz.rs
conservatory/src/ui/: accent.rs  audiobooks.rs  coalescing.rs  covers.rs  dialogs.rs  facet_pane.rs  fields.rs  inspector.rs  mod.rs  now_bar.rs  now_playing_panel.rs  objects.rs  podcasts.rs  queue_panel.rs  rows.rs  shortcuts.rs  sound.rs  spectrum.rs  status_page.rs  track_list.rs  waveform.rs  window.rs
docs/: accent.md  audiobook-reader.md  debugging.md  genre-normalization.md  hyprland.md  import.md  keymap.md  libmpv-profiles.md  mover.md  path-template.md  schema.md  scrobble.md  search-grammar.md  theme.md
scripts/: demo.sh
