[workspace]
resolver = "3"
members = [
    "conservatory-core",
    "conservatory-search",
    "conservatory-podcasts",
    "conservatory-audiobooks",
    "conservatory-cli",
    "conservatory",
]

[workspace.package]
version = "0.0.85"
edition = "2024"
rust-version = "1.88"
license = "GPL-3.0-or-later"
repository = "https://github.com/virinvictus/Conservatory"
authors = ["Brandon LaRocque <larocque.brandon@gmail.com>"]

[workspace.dependencies]
# Dependency catalog for the planned build (spec §11). Declared here as the
# agreed version set; member crates wire them in per-phase. Nothing is pulled
# until a member actually depends on it. New crates still require sign-off
# (spec §11), so the open choices below stay commented until decided.

# Async + IO
tokio = { version = "1.42", features = ["full"] }
# reqwest is pulled by conservatory-podcasts (Phase 6), not core.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "stream"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled", "chrono", "trace"] }

# Feed parsing (pulled by conservatory-podcasts at Phase 6, ported from belfry-core)
feed-rs = "2.2"
quick-xml = "0.37"

# Playback
libmpv2 = "4.1"

# Visualizer (Phase 12d, spec §12). libmpv exposes no PCM tap, so the spectrum
# captures the PipeWire sink monitor (`pipewire`, binary-only I/O) and runs its
# own FFT (`realfft`, on core, where the pure band math is unit-tested). Both
# MIT/Apache, compatible with the GPL-3.0-or-later app. Signed off at 12d.
realfft = "3.5"
pipewire = "0.10"

# Tag read/write (music). Signed off at Phase 1c (spec §7.1): lofty (read+write,
# broad coverage) over symphonia (decode-only), so one library serves both the
# 1c tag read and the 5b embedded write-back.
lofty = "0.21"

# HTML / chapters / images (ammonia + id3 are pulled by conservatory-podcasts;
# image is core, for cover decode + accent)
ammonia = "4.0"
id3 = "1.16"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Credentials (libsecret; pulled by conservatory-podcasts for HTTP Basic auth).
# default-features off: the default pulls the async-std runtime, which conflicts
# with the tokio runtime the rest of the workspace uses. native_crypto keeps the
# file backend pure-Rust (no system OpenSSL).
oo7 = { version = "0.3", default-features = false, features = ["tokio", "native_crypto"] }

# D-Bus (MPRIS2 + suspend inhibitor)
zbus = { version = "5.2", default-features = false, features = ["tokio"] }

# C setlocale: libmpv's mpv_create() requires LC_NUMERIC = "C" (Phase 4c fix).
libc = "0.2"

# Serde / config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Misc
regex = "1.11"
# Phase 8b: NFKC normalization for the duplicate-detection key folding (the
# Lattice `_norm_key` port). Pure-Rust, no transitive weight.
unicode-normalization = "0.1.25"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
url = "2.5"
anyhow = "1.0"
thiserror = "2.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP types (transitive via reqwest; explicit because FetchOutcome surfaces Bytes)
bytes = "1.7"

# Test infrastructure
tempfile = "3.14"
wiremock = "0.6"

# GTK (Phase 3+). The version features set the *minimum* GTK/libadwaita we
# build against: pinned to 4.14 / 1.5 (Ubuntu 24.04 / the CI runner). The GUI
# only needs APIs at that level (e.g. `adw::AlertDialog`, libadwaita 1.5); raise
# these only when a newer binding is actually used (and CI's GTK is bumped too).
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_5"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
