[package]
name = "conservatory-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "conservatory-cli"
path = "src/main.rs"

# Phase 1a ships the `debug-roundtrip` verb (the worker/pool usable artifact).
# The real verbs (import, organize, search, tag, queue, podcast, stats) land at
# Phase 2+ (spec §9).
[dependencies]
conservatory-core = { path = "../conservatory-core" }
conservatory-search = { path = "../conservatory-search" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
