[package]
name = "conservatory-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Phase 1a (spec §17) wires in tokio + rusqlite for the single-writer worker,
# read pool, and migration runner. Each crate is already in the agreed
# workspace catalog (spec §11); later sub-phases activate the rest.
[dependencies]
tokio = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
