[package]
name = "conservatory-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Phase 1a (spec §17) wires in tokio + rusqlite for the single-writer worker,
# read pool, and migration runner. Each crate is already in the agreed
# workspace catalog (spec §11); later sub-phases activate the rest.
[dependencies]
tokio = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
# Phase 1c: tag read (lofty) and cover decode + accent extraction (image).
lofty = { workspace = true }
image = { workspace = true }
# Phase 4a: the libmpv playback host (spec §6). Links the system libmpv at
# runtime; the player lives in core (spec §16.13), not the GTK binary.
libmpv2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
# Test-only: the Phase 3a SQL-vs-eval parity test exercises both search paths
# against a fixture DB. Core does not depend on the search crate at runtime.
conservatory-search = { path = "../conservatory-search" }
