[package]
name = "conservatory-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Phase 1a (spec §17) wires in tokio + rusqlite for the single-writer worker,
# read pool, and migration runner. Each crate is already in the agreed
# workspace catalog (spec §11); later sub-phases activate the rest.
[dependencies]
tokio = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
# Phase 10a: the first config.toml (spec §10). serde derive + toml are already
# workspace deps; core stays glib-free so the loader is CLI-testable.
toml = { workspace = true }
chrono = { workspace = true }
# Phase 1c: tag read (lofty) and cover decode + accent extraction (image).
lofty = { workspace = true }
image = { workspace = true }
# Phase 4a: the libmpv playback host (spec §6). Links the system libmpv at
# runtime; the player lives in core (spec §16.13), not the GTK binary.
libmpv2 = { workspace = true }
# Phase 12d: the visualizer FFT. The pure PCM→bands math lives here (spec
# §16.13: logic in core, CLI-testable); the PipeWire capture is in the binary.
realfft = { workspace = true }
# Phase 4c-i: MPRIS2 + the suspend inhibitor (spec §6.5). D-Bus, on tokio.
zbus = { workspace = true }
# Phase 4c fix: setlocale(LC_NUMERIC, "C") so libmpv's mpv_create() succeeds
# under a GTK-set locale.
libc = { workspace = true }
# Phase 8b: NFKC folding for the duplicate-detection normalization keys.
unicode-normalization = { workspace = true }
# Phase 9: the app-wide secret store (scrobble token + the podcast Basic-auth
# credentials moved here from conservatory-podcasts). libsecret via oo7; the
# in-memory backend covers headless tests.
oo7 = { workspace = true }
# Phase 9: the scrobble submitter (spec §14 carve-out). reqwest is already a
# workspace dep (pulled by conservatory-podcasts); it lands in core too because
# scrobbling covers music, the native program, not just the podcast plugin.
# serde_json builds the ListenBrainz submit-listens payload; the reqwest `json`
# feature (added on top of the workspace set) sends it and reads the reply.
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
# Phase 9a: exercise the real ListenBrainz reqwest + JSON path against a mock
# server (the podcast fetcher's wiremock precedent).
wiremock = { workspace = true }
# Test-only: the Phase 3a SQL-vs-eval parity test exercises both search paths
# against a fixture DB. Core does not depend on the search crate at runtime.
conservatory-search = { path = "../conservatory-search" }
