[package]
name = "conservatory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "conservatory"
path = "src/main.rs"

# Compile-time plugins (spec §2.2): the Podcasts and Audiobooks tabs exist only
# when their feature is on. The default build ships all three media types;
# `--no-default-features` is the music-only build, which CI keeps green.
[features]
default = ["podcasts", "audiobooks"]
podcasts = ["dep:conservatory-podcasts"]
audiobooks = ["dep:conservatory-audiobooks"]

# GTK4 + libadwaita land at Phase 3b (the faceted browse window). The build now
# needs the system gtk4 / libadwaita dev libraries (CI installs them).
[dependencies]
conservatory-core = { path = "../conservatory-core" }
conservatory-search = { path = "../conservatory-search" }
conservatory-podcasts = { path = "../conservatory-podcasts", optional = true }
conservatory-audiobooks = { path = "../conservatory-audiobooks", optional = true }
gtk4 = { workspace = true }
libadwaita = { workspace = true }
# Phase 3c: the filter bar resolves relative date keywords (`added:thisweek`)
# against today, so the grammar glue needs a NaiveDate.
chrono = { workspace = true }
# Phase 3c: the browse window now stands up the single-writer worker (for saving
# Perspectives), so the binary drives a tokio runtime.
tokio = { workspace = true }
# v0.0.38: install a tracing subscriber so the wired-up tracing calls actually
# surface (RUST_LOG, or `--debug`). Without a subscriber they are silent no-ops.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# Headless tests for the filter-bar glue build a fixture DB through the worker.
tempfile = { workspace = true }
